cluster-gitops/apps/keycloak/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: keycloak
  namespace: keycloak
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: keycloak.lab.mxe11.nl
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: keycloak-tls
            namespace: keycloak
      allowedRoutes:
        namespaces:
          from: Same
    - name: http
      protocol: HTTP
      port: 80
      hostname: keycloak.lab.mxe11.nl
      allowedRoutes:
        namespaces:
          from: Same
