cluster-gitops/apps/keycloak/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-redirect
  namespace: keycloak
spec:
  parentRefs:
    - name: keycloak
      namespace: keycloak
      sectionName: http
  hostnames:
    - keycloak.lab.mxe11.nl
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
